<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary_background"
    tools:context=".MainActivity"
    tools:ignore="UsingOnClickInXml"
    >
    <ImageView
        android:id="@+id/LogoView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ShiftServer"
        android:textSize="32dp"
        app:layout_constraintTop_toBottomOf="@id/LogoView"
        app:layout_constraintStart_toStartOf="@id/LogoView"
        app:layout_constraintEnd_toEndOf="@id/LogoView"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="8dp"
        app:cardUseCompatPadding="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <EditText
                    android:hint="@string/username"
                    android:id="@+id/InputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"/>

                <EditText
                    android:hint="@string/password"
                    android:id="@+id/InputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:gravity="center_horizontal"
        android:textColor="@color/button_tintcolor"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:enabled="false"
        android:layout_marginTop="15dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/ResetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/Signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:textColor="@color/button_tintcolor"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>